# NeCMakeListsFile

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/cmakelists/file/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sty/ne/cmakelists/file/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/ne/cmakelists/file/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
